<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".auth.loginuser.LoginActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardBackgroundColor="@color/card_background_light"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <View
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="@color/card_background" />
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/login"
                    android:textColor="#BC8EFA"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:mtf_image="@drawable/ic_mail_grey600_24dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:background="@drawable/selector_bg_edit"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:maxLines="1"/>

            </com.github.florent37.materialtextfield.MaterialTextField>
        </LinearLayout>
            <!--password-->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content">
                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_image="@android:drawable/ic_lock_idle_lock">
                    <EditText
                        android:id="@+id/password"
                        android:textSize="13sp"
                        android:hint="@string/signup_password_str"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/selector_bg_edit"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingBottom="2dp" />
                </com.github.florent37.materialtextfield.MaterialTextField>
            </LinearLayout>

            <!--sign in button-->
            <LinearLayout
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <!-- android:stateListAnimator="@drawable/state_list_animator_z"-->

                <Button
                    android:id="@+id/email_sign_in_button"
                    android:background="@drawable/bt_shape"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/action_sign_in"
                    android:textColor="#d3d3d3"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_signin_button"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="16dp"/>

            </LinearLayout>
            <!--forgot password link-->
            <Button
                android:id="@+id/forgot_password_link"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:padding="10dp"
                android:background="@drawable/md_transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/forgot_your_password" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:backgroundTint="#7766AF"
        android:src="@drawable/plus"
        android:transitionName="loginFab"
        android:layout_alignTop="@id/cv_container"
        android:layout_marginTop="25dp"
        android:layout_alignEnd="@id/cv_container"
        android:layout_marginEnd="-20dp"
        android:layout_alignRight="@id/cv_container"
        android:layout_marginRight="-20dp"
        tools:targetApi="lollipop" />

</RelativeLayout>
</ScrollView>