<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".auth.loginuser.LoginActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="@color/card_background_light"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            android:layout_centerInParent="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp">

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="50dp"
                        android:text="@string/reset_password"
                        android:textColor="#BC8EFA"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.github.florent37.materialtextfield.MaterialTextField
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:mtf_image="@drawable/ic_mail_grey600_24dp">

                        <EditText
                            android:id="@+id/forgot_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:textSize="15sp"
                            android:textColor="@color/black"
                            android:background="@drawable/selector_bg_edit"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:maxLines="1"/>

                    </com.github.florent37.materialtextfield.MaterialTextField>
                </LinearLayout>

                <!--submit button-->
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/submit_password_reset"
                        android:background="@drawable/bt_shape"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:text="@string/submit_pass_reset"
                        android:textColor="#d3d3d3"/>

                </LinearLayout>

                <!--cancel-->
                <Button
                    android:id="@+id/cancel_return"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:padding="10dp"
                    android:background="@drawable/md_transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/cancel_password" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>