...
    <string name="signup_role_str">Role</string>
    <string name="err_msg_password_match">Passwords do not match</string>
    <string name="chamarole_chairperson">Chairperson</string>
    <string name="chamarole_vicechair">Vice</string>
    <string name="chamarole_treasurer">Treasurer</string>
    <string name="chamarole_member">Member</string>
    <string name="register_new_account">NEW ACCOUNT</string>
    <string name="register_proceed">PROCEED</string>
    <string name="registerstep_slide_policy_error">Please fill out all the fields.</string>
    <string name="err_msg_phone">Please enter your phone number</string>
    <string name="err_msg_chamaname">Field is required.</string>
    <string name="register_new_chamaaccount">NEW CHAMA</string>
    <string name="confirm_phoneNo_str">Phone Number</string>
    <string name="confirm_email_str">Email Address</string>
    <string name="confirm_name_str">Full Name</string>
    <string name="confirm_new_account">Confirm your details.</string>
    <string name="login">LOGIN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="login_success">Login Success</string>
    <string name="statement_title_header">Available funds</string>
    <string name="statement_bal_view_txt">Ksh. Balance</string>
...
    <string name="appintro_2">Chama management</string>
    <string name="appdesc_2">Simple chama financial management</string>
    <string name="appintro_3">Live updates</string>
    <string name="appdesc_3">Get live updates on your chama wherever you are.</string>
    <string name="cancel_password">Cancel</string>
    <string name="submit_pass_reset">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="display_reset_email">Password reset sent, please check your email.</string>
    <string name="err_msg_password_login">Invalid Password</string>
    <string name="drawer_item_projects">Projects</string>
    <string name="drawer_item_reports">Reports</string>
    <string name="choose">choose</string>
    <string name="full_statement_title">Select a period</string>
...
